@startuml
entity dim_usuarios {
  +user_id : integer <<PK>>
  --
  name : string
  entry_date : date
  entry_time : time
  update_date : date
  e-mail : string
  cpf : string
}

entity dim_produtos {
  +product_id : integer <<PK>>
  --
  name : string
  price : decimal
  stock : integer
  created_at : date
  description : string
}

entity dim_tempo {
  +tempo_id : integer <<PK>>
  --
  data : date
  dia_da_semana : string   -- Exemplo: Segunda-feira
  eh_final_de_semana : boolean  -- True se sábado ou domingo
  eh_feriado : boolean  -- True para feriados nacionais/locais
  nome_mes : string  -- Nome do mês (Ex.: Janeiro)
  trimestre : integer  -- Trimestre (1 a 4)
  semestre : integer  -- Semestre (1 ou 2)
  ano : integer  -- Ano (Ex.: 2025)
}

entity fato_pedidos {
  +pedido_id : integer <<PK>>
  +user_id : integer <<FK>>  -- Relacionamento com dim_usuarios
  +product_id : integer <<FK>>  -- Relacionamento com dim_produtos
  +tempo_id : integer <<FK>>  -- Relacionamento com dim_tempo
  --
  created_at : date
  items : integer
  total : decimal
  payment_status : string
  payment_method : string
  payment_date : date
  shipping_status : string
  shipping_status_date_awaiting_payment : date
  shipping_status_date_preparing : date
  shipping_status_date_sent : date
  shipping_status_date_delivered : date
}

dim_usuarios --> fato_pedidos : 1:N
dim_produtos --> fato_pedidos : 1:N
dim_tempo --> fato_pedidos : 1:N
@enduml